[tool.poetry]
name = "agents-tutorial"
version = "0.1.0"
description = "Agents tutorial project"
authors = ["Marcin Kawka <kawka.marcin@gmail.com>"]
readme = "README.md"
license = "MIT"
packages = [{ include = "agents_tutorial", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
annotated-types = "0.7.0"
anyio = "4.11.0"
attrs = "25.3.0"
certifi = "2025.8.3"
cfgv = "3.4.0"
charset-normalizer = "3.4.3"
click = "8.3.0"
colorama = "0.4.6"
distlib = "0.4.0"
distro = "1.9.0"
filelock = "3.19.1"
griffe = "1.14.0"
h11 = "0.16.0"
httpcore = "1.0.9"
httpx = "0.28.1"
httpx-sse = "0.4.1"
identify = "2.6.15"
idna = "3.10"
jiter = "0.11.0"
jsonschema = "4.25.1"
jsonschema-specifications = "2025.9.1"
load-dotenv = "0.1.0"
mcp = "1.16.0"
nodeenv = "1.9.1"
openai = "<2.0.0"
openai-agents = "0.3.3"
platformdirs = "4.4.0"
pydantic = "2.11.9"
pydantic-settings = "2.11.0"
pydantic-core = "2.33.2"
python-dotenv = "1.1.1"
python-multipart = "0.0.20"
pandas-stubs = "2.3.2.250926"
pyyaml = "6.0.3"
referencing = "0.36.2"
requests = "2.32.5"
rpds-py = "0.27.1"
sniffio = "1.3.1"
sse-starlette = "3.0.2"
starlette = "0.48.0"
tqdm = "4.67.1"
typing-inspection = "0.4.2"
typing-extensions = "4.15.0"
urllib3 = "2.5.0"
uvicorn = "0.37.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "4.3.0"
types-requests = "2.32.4.20250913"
virtualenv = "20.34.0"

[tool.poetry.scripts]
# example: agents-tutorial = "agents_tutorial.cli:main"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"


[[tool.mypy.overrides]]
module = ["load_dotenv.*","agents.*","openai.*"]
follow_untyped_imports = true
ignore_missing_imports = true